@@ -13,6 +13,8 @@
 	  when a server_child starts. Also the server_child switches back
 	  to NSD_RUN mode when a bad mode happens.
 	- check if ixfrs start from the version in memory.
+	- if IXFR/AXFR ends in a serial that is newer than the serial
+	  that was sent in an notify, update the notified serial.
 
 5 Apr 2006: Wouter
 	- added lowerbound for retry timeout.
